common/resources.tf

data "aws_availability_zones" "available" {}

locals {
  cluster_name = "common-${random_string.suffix.result}"
}

resource "random_string" "suffix" {
  length  = 8
  special = false
}

module "vpc-sydney" {
  source  = "terraform-aws-modules/vpc/aws"
  version = "3.2.0"

  name                 = "training-vpc"
  cidr                 = "10.100.0.0/16"
  azs                  = data.aws_availability_zones.available.names
  private_subnets      = ["10.100.1.0/24", "10.100.2.0/24", "10.100.3.0/24"]
  public_subnets       = ["10.100.4.0/24", "10.100.5.0/24", "10.100.6.0/24"]
  enable_nat_gateway   = true
  single_nat_gateway   = true
  enable_dns_hostnames = true

  tags = {
    "kubernetes.io/cluster/${local.cluster_name}" = "shared"
  }

  public_subnet_tags = {
    "kubernetes.io/cluster/${local.cluster_name}" = "shared"
    "kubernetes.io/role/elb"                      = "1"
  }

  private_subnet_tags = {
    "kubernetes.io/cluster/${local.cluster_name}" = "shared"
    "kubernetes.io/role/internal-elb"             = "1"
  }
}

resource "aws_security_group" "worker_group_mgmt_one" {
  name_prefix = "worker_group_mgmt_one"
  vpc_id      = module.vpc-sydney.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/8",
    ]
  }
}

resource "aws_security_group" "worker_group_mgmt_two" {
  name_prefix = "worker_group_mgmt_two"
  vpc_id      = module.vpc-sydney.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "192.168.0.0/16",
    ]
  }
}

resource "aws_security_group" "all_worker_mgmt" {
  name_prefix = "all_worker_management"
  vpc_id      = module.vpc-sydney.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/8",
      "172.16.0.0/12",
      "192.168.0.0/16",
    ]
  }
}

module "hashicorp-eks" {
  source          = "terraform-aws-modules/eks/aws"
  cluster_name    = local.cluster_name
  cluster_version = "1.21"
  subnets         = module.vpc-sydney.private_subnets

  tags = {
    "environment" = "production"
  }

  vpc_id = module.vpc-sydney.vpc_id

  node_groups_defaults = {
    ami_type  = "AL2_x86_64"
    disk_size = 50
  }

  node_groups = {
    general = {
      desired_capacity = 3
      max_capacity     = 10
      min_capacity     = 3

      instance_type = "t3.medium"
      k8s_labels = {
        Environment = "production"
        GithubRepo  = "terraform-aws-eks"
        GithubOrg   = "terraform-aws-modules"
      }
      additional_tags = {
        ExtraTag = "development"
      }
    }
  }
}

# Extracting the certificate for our EKS cluster
# Somehow we need to pass URL and not certificate directly
data "tls_certificate" "eks" {
  url = module.hashicorp-eks.cluster_oidc_issuer_url
}

resource "aws_iam_openid_connect_provider" "k8s-iam-connector" {
  client_id_list  = ["sts.amazonaws.com"]
  thumbprint_list = ["${data.tls_certificate.eks.certificates.0.sha1_fingerprint}"]
  url             = module.hashicorp-eks.cluster_oidc_issuer_url
}

data "aws_eks_cluster" "cluster" {
  name = module.hashicorp-eks.cluster_id
}

data "aws_eks_cluster_auth" "cluster" {
  name = module.hashicorp-eks.cluster_id
}
